################################################################################
# Spectral Python (SPy) package change log
################################################################################

2013-02-10	tboggs <tboggs@users.sourceforge.net>

    Warn users if they try to call a GUI function outside of ipython and start
    a wx.App if there is not one already
    
    * __init__.py: Added parameter `START_WX_APP`.
    * graphics/__init__.py: Removed unecessary imports.
    * graphics/graphics.py:
      (view): Check if running ipython and if wx.App exists.
      (view_cube): ditto
      (view_nd): ditto
      (view_indexed): ditto
      (running_ipython): New function
      (warn_no_ipython): New function
      (check_wx_app): New function

    Set raster plotting module on initialization
    
    * __init__.py: Set raster plotter.

    Handle scalar valued transforms (e.g., scaling spectral data by a constant).
    
    * algorithms/transforms.py:
      (LinearTransform.__init__): Handle scalar transforms.
      (LinearTransform.__call__): Handle scalar transforms.
    * io/spyfile.py:
      (TransformedImage.__init__): Handle scalar valued transforms.

    Fixed error when double-clicking on transformed image raster view.
    
    * graphics/spypylab (plot): Check for presence of `bands` member of data.
    * io/spyfile.py:
      - Changed doc string for ipython.
      (TransformedImage.bands): New property method.

    Search spectral data directories for files opened not via `spectral.image`.
    
    * io/envi.py (open): Search data directories for optional `image` arg.
    * io/erdas.py (open): Search data directories for file arg.

    * io/aviris.py (open): Remove deprecated call to `readAvirisBands`.

    * graphics/graphics.py (view_indexed): Remove deprecated call to
      `init_graphics`.
    
2013-02-03	tboggs <tboggs@users.sourceforge.net>

    This is the first commit for SPy migration to using ipython for running